@startuml

title __DASHBOARD's Class Diagram__\n

  namespace com.example.keepmoneyv3 {
    namespace ui.dashboard {
      class com.example.keepmoneyv3.ui.dashboard.DashboardFragment {
          + onAttach()
          + onCreateView()
          ~ buildListView()
          - sumEntriesOrPurchases()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace ui.dashboard {
      enum ChooseEP {
        ENTRIES
        PURCHASES
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace ui.dashboard {
      interface com.example.keepmoneyv3.ui.dashboard.DashboardFragment.DashboardFragmentListener {
          {abstract} + GetUserFromSavedBundle()
          {abstract} + onDashboardFragmentOpened()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace ui.dashboard {
      class com.example.keepmoneyv3.ui.dashboard.DashboardViewModel {
          - mText : MutableLiveData<String>
          + DashboardViewModel()
          + getText()
      }
    }
  }
  

  com.example.keepmoneyv3.ui.dashboard.DashboardFragment -up-|> androidx.fragment.app.Fragment
  com.example.keepmoneyv3.ui.dashboard.DashboardFragment o-- com.example.keepmoneyv3.ui.dashboard.DashboardFragment.DashboardFragmentListener : listener
  com.example.keepmoneyv3.ui.dashboard.DashboardFragment +-down- com.example.keepmoneyv3.ui.dashboard.DashboardFragment.ChooseEP
  com.example.keepmoneyv3.ui.dashboard.DashboardFragment +-down- com.example.keepmoneyv3.ui.dashboard.DashboardFragment.DashboardFragmentListener
  com.example.keepmoneyv3.ui.dashboard.DashboardViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
